@@ -763,3 +763,7 @@ Replaced travis CI with github workflows for automated testing.
 Cleaning up the code.
 Raise NotImplementedError for PSF optimal photometry routines.
 
+*****
+
+Cleaned up centering.
+
